@@ -17,17 +17,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <name>xbatis-spring-boot-parent</name>
     <parent>
         <groupId>cn.xbatis</groupId>
         <artifactId>xbatis</artifactId>
         <version>1.9.3</version>
     </parent>
 
-    <url>https://gitee.com/xbatis/xbatis-spring-boot-parent</url>
+    <url>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent/tree/main</url>
     <artifactId>xbatis-spring-boot-parent</artifactId>
-    <name>xbatis-spring-boot-parent</name>
+    <version>1.9.3</version>
     <description>
-        xbatis的spring启动器的parent
+        xbatis的springboot2启动器的parent
     </description>
     <packaging>pom</packaging>
 
@@ -64,23 +65,24 @@
     </developers>
 
     <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+
         <xbatis.version>1.9.3</xbatis.version>
         <xbatis-spring-boot-starter.version>1.9.3</xbatis-spring-boot-starter.version>
         <xbatis-datasource-routing.version>1.0.9</xbatis-datasource-routing.version>
         <xbatis-generator-core.version>1.1.5</xbatis-generator-core.version>
 
-        <mybatis-spring.version>2.1.2</mybatis-spring.version>
-        <spring-boot.version>2.7.18</spring-boot.version>
-
-        <mybatis-freemarker.version>1.3.0</mybatis-freemarker.version>
-        <mybatis-velocity.version>2.3.0</mybatis-velocity.version>
-        <mybatis-thymeleaf.version>1.1.0</mybatis-thymeleaf.version>
-
         <!-- log version -->
         <logback.version>1.2.13</logback.version>
         <slf4j.version>1.7.36</slf4j.version>
 
-        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
+        <mybatis-spring.version>2.1.2</mybatis-spring.version>
+        <spring-boot.version>2.7.8</spring-boot.version>
+
+        <mybatis-freemarker.version>1.3.1</mybatis-freemarker.version>
+        <mybatis-velocity.version>2.3.0</mybatis-velocity.version>
+        <mybatis-thymeleaf.version>1.1.0</mybatis-thymeleaf.version>
     </properties>
 
     <dependencyManagement>
@@ -109,6 +111,12 @@
                 <version>${xbatis-generator-core.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis-spring.version}</version>
+            </dependency>
+
             <!-- log -->
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -132,12 +140,6 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>${logback.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis-spring</artifactId>
-                <version>${mybatis-spring.version}</version>
             </dependency>
 
             <dependency>
@@ -241,7 +243,11 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+            </plugin>
         </plugins>
     </build>
-
 </project>
